--- a/Package/Marina/index.html
+++ b/Package/Marina/index.html
@@ -306,17 +306,22 @@
         });
     </script>
 <script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+window.addEventListener('keydown', function(e) {
+    if (e.key === 'Backspace') {
+        const el = e.target;
+        const tag = el && el.tagName;
+        const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
+
+        if (!isEditable) {
+            e.preventDefault();
+            console.log('Sending NAVIGATE_BACK from nested iframe');
+            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, 'https://hrtorabii-404.github.io');
+        }
     }
-  }
+});
+
+document.addEventListener('DOMContentLoaded', function() {
+    document.body.focus(); // فوکوس اولیه روی بدنه صفحه
 });
 </script>
 
