--- a/Package/Marina/index.html
+++ b/Package/Marina/index.html
@@ -305,25 +305,22 @@
             new Chart(ctx, config);
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e) {
-    if (e.key === 'Backspace') {
-        const el = e.target;
-        const tag = el && el.tagName;
-        const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
 
-        if (!isEditable) {
-            e.preventDefault();
-            console.log('Sending NAVIGATE_BACK from nested iframe');
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    // مدیریت رویداد Backspace
+    window.addEventListener('keydown', function(e) {
+        const tag = e.target.tagName.toLowerCase();
+        const isEditable = tag === 'input' || tag === 'textarea' || e.target.isContentEditable;
+
+        if (e.key === 'Backspace' && !isEditable) {
+            e.preventDefault(); // جلوگیری از بازگشت مرورگر
+            // ارسال پیام NAVIGATE_BACK به صفحه والد (FS_project)
             window.parent.postMessage({ type: 'NAVIGATE_BACK' }, 'https://hrtorabii-404.github.io');
         }
-    }
+    });
 });
-
-document.addEventListener('DOMContentLoaded', function() {
-    document.body.focus(); // فوکوس اولیه روی بدنه صفحه
-});
-</script>
+</script>    
 
 </body>
 </html>
