--- a/Package/Marina/index.html
+++ b/Package/Marina/index.html
@@ -307,20 +307,24 @@
     </script>
 
 <script>
-document.addEventListener('DOMContentLoaded', function () {
-    // مدیریت رویداد Backspace
-    window.addEventListener('keydown', function(e) {
-        const tag = e.target.tagName.toLowerCase();
-        const isEditable = tag === 'input' || tag === 'textarea' || e.target.isContentEditable;
+    // این اسکریپت را به تمام صفحات جزئیات پروژه اضافه کنید
 
-        if (e.key === 'Backspace' && !isEditable) {
-            e.preventDefault(); // جلوگیری از بازگشت مرورگر
-            // ارسال پیام NAVIGATE_BACK به صفحه والد (FS_project)
-            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+    window.addEventListener('keydown', function(e) {
+        if (e.key === 'Backspace') {
+            // مطمئن شو که کاربر در حال تایپ در یک فیلد متنی نیست
+            const isEditable = e.target.isContentEditable || 
+                               e.target.tagName === 'INPUT' || 
+                               e.target.tagName === 'TEXTAREA';
+            
+            if (!isEditable) {
+                e.preventDefault(); // جلوگیری از بازگشت مرورگر
+                
+                // به والد مستقیم خود (یعنی لیست کارت‌ها) پیام بده
+                window.parent.postMessage({ type: 'CHILD_NAVIGATE_BACK' }, '*');
+            }
         }
     });
-});
-</script>    
+</script>
 
 </body>
 </html>
