--- a/Package/Fanavari/index.html
+++ b/Package/Fanavari/index.html
@@ -274,22 +274,20 @@
             };
 
             new Chart(ctx, config);
+      window.addEventListener('keydown', function(e) {
+            if (e.key === 'Backspace') {
+                const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+                if (!isEditable) {
+                    e.preventDefault();
+                    // *** ایراد دوم اینجا برطرف شد ***
+                    // این پیام صحیح برای ارسال از صفحه جزئیات به لیست کارت‌ها است
+                    window.parent.postMessage({ type: 'CHILD_NAVIGATE_BACK' }, '*');
+                }
+            }
         });
+  });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
+
 
 </body>
 </html>
