--- a/Package/MahalehBozorgsal/index.html
+++ b/Package/MahalehBozorgsal/index.html
@@ -271,22 +271,303 @@
             };
 
             new Chart(ctx, config);
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>داشبورد پروژه دهکده گردشگری خوراک</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Vazirmatn', sans-serif;
+            background-color: #f0f4f8;
+        }
+        .chart-container {
+            position: relative;
+            height: 400px;
+            width: 100%;
+        }
+        .card {
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        }
+        .icon-bg {
+            background-color: rgba(217, 70, 239, 0.1);
+            color: #d946ef;
+        }
+        /* Table styles */
+        .table-container {
+            overflow-x: auto;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 12px 15px;
+            text-align: right;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        thead {
+            position: sticky;
+            top: 0;
+            z-index: 1;
+        }
+        thead th {
+            background-color: #f9fafb;
+            font-weight: 600;
+            color: #374151;
+        }
+        tbody tr:last-child td {
+            border-bottom: none;
+        }
+        .zone-header {
+            background-color: #fdf4ff;
+            font-weight: bold;
+            color: #a21caf;
+        }
+        /* Tooltip styles */
+        .tooltip-row {
+            position: relative;
+            cursor: help;
+        }
+        .tooltip-row .tooltip-text {
+            visibility: hidden;
+            width: 300px;
+            background-color: #1f2937;
+            color: #fff;
+            text-align: center;
+            border-radius: 8px;
+            padding: 10px;
+            position: absolute;
+            z-index: 10;
+            bottom: 110%;
+            left: 50%;
+            transform: translateX(-50%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            font-size: 13px;
+            font-weight: 400;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .tooltip-row .tooltip-text::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #1f2937 transparent transparent transparent;
+        }
+        .tooltip-row:hover {
+            background-color: #f3f4f6;
+        }
+        .tooltip-row:hover .tooltip-text {
+            visibility: visible;
+            opacity: 1;
+        }
+    </style>
+</head>
+<body class="p-4 sm:p-6 md:p-8">
+    <div class="max-w-7xl mx-auto">
+        <!-- Header -->
+        <header class="mb-8 text-center">
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-800">پروژه شماره ۱۴: دهکده گردشگری خوراک</h1>
+            <p class="text-md text-gray-600 mt-4 max-w-3xl mx-auto bg-gray-100 p-4 rounded-lg border-r-4 border-fuchsia-500">
+                <b>کانسپت پروژه:</b> این مجموعه یک هاب گردشگری-خوراکی است که با تمرکز بر معرفی هویت غنی آشپزی ایرانی و ارائه تجربه‌ای متنوع از خوراک‌های بین‌المللی، به یک مقصد رویدادمحور و پایدار برای گردشگران داخلی و خارجی تبدیل می‌شود.
+            </p>
+        </header>
+
+        <!-- Key Metrics -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+            <div class="card p-5 flex items-center">
+                <div class="icon-bg p-3 rounded-full mr-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5v-4m0 0h-4m4 0l-5-5" /></svg>
+                </div>
+                <div>
+                    <h3 class="text-gray-500 text-sm">مساحت کل عرصه</h3>
+                    <p class="text-2xl font-bold text-gray-800">۱۷۰,۰۰۰ <span class="text-base font-normal">مترمربع</span></p>
+                </div>
+            </div>
+            <div class="card p-5 flex items-center">
+                <div class="icon-bg p-3 rounded-full mr-4">
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" /></svg>
+                </div>
+                <div>
+                    <h3 class="text-gray-500 text-sm">زیربنای کل</h3>
+                    <p class="text-2xl font-bold text-gray-800">۶۸,۰۰۰ <span class="text-base font-normal">مترمربع</span></p>
+                </div>
+            </div>
+            <div class="card p-5 flex items-center">
+                <div class="icon-bg p-3 rounded-full mr-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm.75-13.25a.75.75 0 00-1.5 0v6.5a.75.75 0 001.5 0v-6.5z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div>
+                    <h3 class="text-gray-500 text-sm">سطح اشغال</h3>
+                    <p class="text-2xl font-bold text-gray-800">۲۰٪</p>
+                </div>
+            </div>
+             <div class="card p-5 flex items-center">
+                <div class="icon-bg p-3 rounded-full mr-4">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01M12 12v-2m0 2v.01M12 12a2 2 0 100 4 2 2 0 000-4zm0 0a2 2 0 110-4 2 2 0 010 4z" />
+                    </svg>
+                </div>
+                <div>
+                    <h3 class="text-gray-500 text-sm">نوع مشارکت</h3>
+                    <p class="text-2xl font-bold text-gray-800">ساخت و اجاره</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Main Content: Table and Chart -->
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+            <!-- Table -->
+            <div class="lg:col-span-2 card p-6">
+                <h2 class="text-xl font-semibold text-gray-800 mb-4">برنامه فیزیکی جامع پروژه</h2>
+                <div class="table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>کاربری پیشنهادی</th>
+                                <th>مساحت عرصه (مترمربع)</th>
+                                <th>مساحت زیربنا (مترمربع)</th>
+                                <th>سطح اشغال (مترمربع)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="zone-header"><td colspan="4">🇮🇷 دهکده غذای ایرانی</td></tr>
+                            <tr class="tooltip-row"><td>بازارچه بومی و کارگاه‌های زنده<span class="tooltip-text">فضایی با معماری چوبی-روستایی شامل غرفه‌های نان داغ، کباب ترش، آش و کارگاه‌های زنده پخت غذا.</span></td><td>20,000</td><td>12,000</td><td>6,000</td></tr>
+                            <tr class="tooltip-row"><td>رستوران اصلی غذاهای شمالی<span class="tooltip-text">یک رستوران شاخص و بزرگ برای ارائه تخصصی غذاهای گیلان و مازندران.</span></td><td>10,000</td><td>5,000</td><td>2,500</td></tr>
+                            <tr class="tooltip-row"><td>موزه خوراک ایرانی<span class="tooltip-text">نمایش تاریخچه و ابزارهای آشپزی سنتی مناطق مختلف ایران.</span></td><td>5,000</td><td>4,000</td><td>2,000</td></tr>
+
+                            <tr class="zone-header"><td colspan="4">🌍 خیابان غذای ملل</td></tr>
+                            <tr class="tooltip-row"><td>پاویون‌های غذای بین‌المللی<span class="tooltip-text">۴ مجموعه ساختمان با معماری خاص هر قاره (آسیا، اروپا، آمریکا، خاورمیانه).</span></td><td>40,000</td><td>20,000</td><td>10,000</td></tr>
+                            <tr class="tooltip-row"><td>کافه جهان (World Café)<span class="tooltip-text">کافه‌ای با منوی تخصصی از قهوه‌ها و چای‌های سراسر دنیا.</span></td><td>5,000</td><td>3,000</td><td>1,500</td></tr>
+                            <tr class="tooltip-row"><td>مرکز کارگاه‌های آشپزی بین‌المللی<span class="tooltip-text">فضایی مجهز برای برگزاری کلاس‌های آموزش آشپزی ملل توسط سرآشپزهای مهمان.</span></td><td>5,000</td><td>4,000</td><td>2,000</td></tr>
+                            
+                            <tr class="zone-header"><td colspan="4">🎉 زون رویداد و تجارت</td></tr>
+                            <tr class="tooltip-row"><td>سالن جشنواره‌ها و تالار چشیدن<span class="tooltip-text">سالنی مدرن برای برگزاری جشنواره‌های فصلی (نان، قهوه) و تست منوهای ترکیبی.</span></td><td>15,000</td><td>5,000</td><td>5,000</td></tr>
+                            <tr class="tooltip-row"><td>فروشگاه محصولات غذایی<span class="tooltip-text">فروشگاه بزرگ برای عرضه محصولات بسته‌بندی شده ایرانی و بین‌المللی.</span></td><td>10,000</td><td>8,000</td><td>4,000</td></tr>
+                            
+                            <tr class="zone-header"><td colspan="4">🚗 خدمات و پشتیبانی</td></tr>
+                            <tr class="tooltip-row"><td>ورودی، مدیریت و آشپزخانه‌های مرکزی<span class="tooltip-text">ساختمان اداری، لابی ورودی و آشپزخانه‌های پشتیبانی برای کل مجموعه.</span></td><td>10,000</td><td>7,000</td><td>3,500</td></tr>
+                            <tr class="tooltip-row"><td>پارکینگ، معابر و فضای سبز<span class="tooltip-text">تأمین پارکینگ و ایجاد مسیر پیاده‌روی "تور خوراکی" در فضای سبز.</span></td><td>50,000</td><td>0</td><td>0</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <!-- Chart -->
+            <div class="card p-6">
+                <h2 class="text-xl font-semibold text-gray-800 mb-4 text-center">مساحت عرصه بر اساس زون (مترمربع)</h2>
+                <div class="chart-container">
+                    <canvas id="areaChart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const ctx = document.getElementById('areaChart').getContext('2d');
+            const data = {
+                labels: ['خدمات و پشتیبانی', 'خیابان غذای ملل', 'دهکده غذای ایرانی', 'رویداد و تجارت'],
+                datasets: [{
+                    label: 'مساحت عرصه (مترمربع)',
+                    data: [60000, 50000, 35000, 25000],
+                    backgroundColor: [
+                        '#6b7280', '#ef4444', '#22c55e', '#d946ef'
+                    ],
+                    borderWidth: 1,
+                    borderRadius: 5
+                }]
+            };
+
+            const config = {
+                type: 'bar',
+                data: data,
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    indexAxis: 'y',
+                    scales: {
+                        x: {
+                            beginAtZero: true,
+                            ticks: {
+                                callback: function(value) {
+                                    return new Intl.NumberFormat('fa-IR').format(value);
+                                },
+                                font: { family: 'Vazirmatn' }
+                            }
+                        },
+                        y: {
+                            ticks: {
+                                font: { family: 'Vazirmatn', size: 12 }
+                            }
+                        }
+                    },
+                    plugins: {
+                        legend: {
+                           display: false
+                        },
+                        tooltip: {
+                            rtl: true,
+                            bodyFont: { family: 'Vazirmatn' },
+                            titleFont: { family: 'Vazirmatn' },
+                            callbacks: {
+                                label: function(context) {
+                                    let label = context.dataset.label || '';
+                                    if (label) {
+                                        label += ': ';
+                                    }
+                                    if (context.parsed.x !== null) {
+                                        label += new Intl.NumberFormat('fa-IR').format(context.parsed.x) + ' مترمربع';
+                                    }
+                                    return label;
+                                }
+                            }
+                        }
+                    }
+                }
+            };
+
+            new Chart(ctx, config);
+       window.addEventListener('keydown', function(e) {
+            if (e.key === 'Backspace') {
+                const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+                if (!isEditable) {
+                    e.preventDefault();
+                    // *** ایراد دوم اینجا برطرف شد ***
+                    // این پیام صحیح برای ارسال از صفحه جزئیات به لیست کارت‌ها است
+                    window.parent.postMessage({ type: 'CHILD_NAVIGATE_BACK' }, '*');
+                }
+            }
+        });
+ });
+    </script>
+
+
+</body>
+</html>
+
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
+
 
 </body>
 </html>
