--- a/Dashboard/Maps/index.html
+++ b/Dashboard/Maps/index.html
@@ -161,6 +161,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            window.focus();
             const defaultMap = 'https://uploadkon.ir/uploads/aa2602_2501-Mahalat.jpg';
             
             const zoneRegulations = {
@@ -477,22 +478,17 @@
 
             setMap(defaultMap);
             preloadImages(); // Start preloading all other maps in the background
+window.addEventListener('keydown', function(e) {
+    if (e.key === 'Backspace') {
+        const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+        if (!isEditable) {
+            e.preventDefault();
+            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+        }
+    }
+});
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
 
 </body>
 </html>
