--- a/Dashboard/MaskuniIncome/index.html
+++ b/Dashboard/MaskuniIncome/index.html
@@ -309,7 +309,8 @@
         };
 
         document.addEventListener('DOMContentLoaded', function () {
-            
+                    window.focus(); 
+
             Chart.defaults.font.family = 'Vazirmatn';
             Chart.defaults.font.size = 12;
             Chart.defaults.color = '#64748b';
@@ -420,22 +421,18 @@
                     scales: { y: { ticks: { callback: (val) => `${formatDynamicValue(val)}` } } }
                 }
             });
+window.addEventListener('keydown', function(e) {
+    if (e.key === 'Backspace') {
+        const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+        if (!isEditable) {
+            e.preventDefault();
+            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+        }
+    }
+});
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
+
 
 </body>
 </html>
