--- a/Dashboard/Prioritization/index.html
+++ b/Dashboard/Prioritization/index.html
@@ -343,6 +343,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+window.focus();
             Chart.defaults.font.family = "'Vazirmatn', sans-serif";
 
             // --- Data Structures ---
@@ -1141,22 +1142,18 @@
             setupControls();
             setupAccordion();
             setupSmartTooltips();
+window.addEventListener('keydown', function(e) {
+    if (e.key === 'Backspace') {
+        const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+        if (!isEditable) {
+            e.preventDefault();
+            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+        }
+    }
+});
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
+
 
 </body>
 </html>
