--- a/DashboardNA/index.html
+++ b/DashboardNA/index.html
@@ -205,7 +205,8 @@
     <!-- MAIN APPLICATION SCRIPT -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            
+                    window.focus(); 
+
             const neighborhoodCostMap = {
                 "محله ۱": { road: 54300, water: 6700, electricity: 5400, gas: 11100 },
                 "محله ۲": { road: 32100, water: 3600, electricity: 1300, gas: 8000 },
@@ -1139,22 +1140,18 @@
                     });
                 }, 500);
             });
+window.addEventListener('keydown', function(e) {
+    if (e.key === 'Backspace') {
+        const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+        if (!isEditable) {
+            e.preventDefault();
+            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+        }
+    }
+});
         });
     </script>
-<script>
-window.addEventListener('keydown', function(e){
-  if (e.key === 'Backspace') {
-    const el = e.target;
-    const tag = el && el.tagName;
-    const isEditable = tag === 'INPUT' || tag === 'TEXTAREA' || (el && el.isContentEditable);
-    if (!isEditable) {
-      e.preventDefault();
-      // پیام به والد بفرست (داشبورد اصلی)
-      window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-    }
-  }
-});
-</script>
+
 
 </body>
 </html>
