--- a/Dashboard/Maps/index.html
+++ b/Dashboard/Maps/index.html
@@ -246,7 +246,7 @@
                     ]
                 },
                 {
-                    zoneName: 'پهنه R1 - مسکونی', mapUrl: defaultMap, zoneCode: 'R1', zoneArea: '3.1 هکتار', subZones: ['R11'],
+                    zoneName: 'پهنه R1 - مسکونی', mapUrl: 'https://uploadkon.ir/uploads/699120_2515-R11.jpg', zoneCode: 'R1', zoneArea: '3.1 هکتار', subZones: ['R11'],
                     projects: [
                         { name: 'مجتمع مسکونی محله ۷', code: 'R11', area: '30,800', builtUpArea: '30,800', location: 'عرصه مسکونی', coords: { top: '80%', left: '81%' } },
                     ]
