--- a/FS_project/index.html
+++ b/FS_project/index.html
@@ -188,6 +188,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const projects = [
+            { title: "مارینا و پلاژ ساحلی", englishTitle: "Marina and Beachfront Plaza", icon: "🏖️", irr: "۲۴.۴۲٪", payback: "۶.۳۷ سال" },
             { title: "مرکز سلامت و تندرستی", englishTitle: "Health and Wellness Center", icon: "🩺", irr: "۱۹.۰۵%", payback: "۷.۴۴ سال" },
             { title: "پارک ماجراجویی ابرها", englishTitle: "Clouds Adventure Park", icon: "⛰️", irr: "۳۵.۲۰%", payback: "۵.۲۴ سال" },
             { title: "هتل 5 ستاره", englishTitle: "5-Star Hotel", icon: "🏨", irr: "۱۸.۲۳%", payback: "۷.۶۶ سال" },
@@ -243,7 +244,29 @@
                 </div>`;
             card.addEventListener('click', function(e) {
                 e.preventDefault();
-                const projectLinkMap = { "مرکز سلامت و تندرستی": "FS_Salamat", "پارک ماجراجویی ابرها": "FS_Abr", "هتل 5 ستاره": "FS_Hotel", "دهکده گردشگری خوراک": "FS_Khorak", "مرکز محله ۱ (تم فرهنگی)": "FS_1Farhangi", "مرکز محله ۲ (فود پلازا)": "FS_2Foodplaza", "مرکز محله ۳ (بازی بزرگسالان)": "FS_3Bozorgsal", "مرکز محله ۴ (بازی کودکان)": "FS_4Koodak", "اکوکمپ لینورا": "FS_Linora", "پل سبز آبی": "FS_Pol", "مجموعه ورزشی و شهربازی مدرن": "FS_ShahrBazi", "سوئیت‌های ساحلی": "FS_Sueet", "تجاری و پارکینگ تله کابین": "FS_Telekabin", "ویلاهای لوکس ساحلی": "FS_Villa", "مسکونی باغ کیوی": "FS_Kivi", "مسکونی محله ۸": "FS_8Maskooni", "پروژه اکواوایلد شمشاد (بوستان شمشاد)": "FS_Shemshad", "مرکز نوآوری و فناوری گردشگری": "FS_Noavari", "مسکونی محله ۷": "FS_7Maskooni", "پروژه دهکده هنر و صنایع دستی": "FS_Sanayedasti" };
+                const projectLinkMap = { 
+                    "مارینا و پلاژ ساحلی": "FS_Marina",
+                    "مرکز سلامت و تندرستی": "FS_Salamat", 
+                    "پارک ماجراجویی ابرها": "FS_Abr", 
+                    "هتل 5 ستاره": "FS_Hotel", 
+                    "دهکده گردشگری خوراک": "FS_Khorak", 
+                    "مرکز محله ۱ (تم فرهنگی)": "FS_1Farhangi", 
+                    "مرکز محله ۲ (فود پلازا)": "FS_2Foodplaza", 
+                    "مرکز محله ۳ (بازی بزرگسالان)": "FS_3Bozorgsal", 
+                    "مرکز محله ۴ (بازی کودکان)": "FS_4Koodak", 
+                    "اکوکمپ لینورا": "FS_Linora", 
+                    "پل سبز آبی": "FS_Pol", 
+                    "مجموعه ورزشی و شهربازی مدرن": "FS_ShahrBazi", 
+                    "سوئیت‌های ساحلی": "FS_Sueet", 
+                    "تجاری و پارکینگ تله کابین": "FS_Telekabin", 
+                    "ویلاهای لوکس ساحلی": "FS_Villa", 
+                    "مسکونی باغ کیوی": "FS_Kivi", 
+                    "مسکونی محله ۸": "FS_8Maskooni", 
+                    "پروژه اکواوایلد شمشاد (بوستان شمشاد)": "FS_Shemshad", 
+                    "مرکز نوآوری و فناوری گردشگری": "FS_Noavari", 
+                    "مسکونی محله ۷": "FS_7Maskooni", 
+                    "پروژه دهکده هنر و صنایع دستی": "FS_Sanayedasti" 
+                };
                 const linkKey = projectLinkMap[project.title];
                 const destination = `https://hrtorabii-404.github.io/namakabroud-report/Dashboard/${linkKey}`;
                 projectIframe.src = destination;
